[project]
name = "spotify-mcp-neuroplaylists"
version = "0.2.0"
description = "MCP server for creating neurophysiological Spotify playlists optimized for different cognitive states"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp==1.3.0",
 "python-dotenv>=1.0.1",
 "spotipy==2.24.0",
]
[[project.authors]]
name = "Scanovich.ai"
email = "info@scanovich.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
spotify-mcp-neuroplaylists = { workspace = true }

[project.scripts]
spotify-mcp = "spotify_mcp:main"
